src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: #dedede;
  --background-rgb: 8, 8, 8;
}

html {
  /* scroll-behavior: smooth;
 scroll-padding-top: 120px;
  background-color: #080808; */
}

body {
  color: var(--foreground-rgb);
  background: rgba(var(--background-rgb));
}

.reset-ui {
}

.features-title {
  background: linear-gradient(90deg, #0f937c 50.05%, #0f9 100.7%);
}

.head-title {
  background: linear-gradient(0deg, #0f937c, #0f9);
}

.product-title {
  background: linear-gradient(90deg, #0f9 1.65%, #0f937c 35.07%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.home-background {
  background: linear-gradient(360deg, #080808 -1.68%, rgba(0, 0, 0, 0) 98.26%),
    url("/backgrounds/homepage.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center top;
}

.product-background {
  background:;
}

.top-sticky {
  /* top: calc(25% + 200px); */
  top: -20%;
}

@media (min-width: 1024px) {
  .top-sticky {
    /* margin-top: 60px;
    top: calc(20% + 240px); */
    top: calc(20%);

    /* top: calc(50%); */
  }
}

/* @media (min-width: 1440px) {
  .top-sticky {
    margin-top: 20px;

    top: calc(20% + 200px);
    /* top: calc(50%); 
  }
} */

.blur-card {
  backdrop-filter: blur(27px);
}

/* Animation Desktop Map */

.map-box-animation {
  animation: pulseEffect 2s ease-in-out 0s alternate infinite;
}

@keyframes pulseEffect {
  0% {
    filter: drop-shadow(0 0 30px #0f9);
  }
  100% {
    filter: drop-shadow(0 0 50px #0f9);
  }
}

@layer utilities {
  .w-container {
    @apply mx-auto max-w-[1440px];
  }
}

.footer-bg-shade {
  border-radius: 30px 30px 0px 0px;
  background: linear-gradient(0deg, #080808 0%, rgba(8, 8, 8, 0) 80%);
}
.cls-1 {
  stroke: #dedede;
}

.cls-1,
.cls-2,
.cls-3 {
  fill: none;
}

.cls-1,
.cls-3 {
  stroke-width: 1.52px;
}

.cls-2,
.cls-4,
.cls-5,
.cls-6 {
  stroke-width: 0px;
}

.cls-4 {
  fill: #fff;
}

.cls-5 {
  fill: #dedede;
}

.cls-6 {
  fill: #0c4a3f;
}

.cls-3 {
  stroke: #0f9;
  stroke-dasharray: 0 0 6.09 6.09;
} /*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */

.scroll-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  will-change: transform;
}

.lgradient-border {
  border: 1px solid;
  border-image-slice: 1;
  border-width: 1px;
  border-radius: 8px;
  border-image-source: linear-gradient(to bottom, #ffffff, transparent);
}
.gradient-borderl {
  display: flex;
  align-items: center;
  width: 90%;
  margin: auto;

  position: relative;
  box-sizing: border-box;
  padding: 1px;

  color: #fff;
  background: #000;

  background-clip: padding-box; /* !importanté */
  border: solid 1px transparent; /* !importanté */
  border-radius: 8px;
}

.gr adient-border {
  display: flex;
  align-items: center;
  width: 90%;
  margin: auto;
  max-width: 22em;

  position: relative;
  padding: 3px;
  box-sizing: border-box;

  color: #fff;
  background: transparent;
  background-clip: padding-box; /* !importanté */
  border: solid 5px transparent; /* !importanté */
  border-radius: 1em;
}
.g radient-border:before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: -1;
  margin: -1px; /* !importanté */
  border-radius: inherit; /* !importanté */
  background: linear-gradient(to bottom, #ffffff, #ffffff00);
}
/* method 2 -> use background-clip to support border-radius */
.gradient-borde r {
  background:
    linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2))
      padding-box,
    linear-gradient(to bottom, #ffffff, #ffffff33) border-box;
  border-radius: 8px;
  background-color: rgba(255, 255, 255, 0.2) padding-box !important;
  border: 1px solid transparent;
}

.gradient-borde {
  position: relative;
  padding: 1px 1px;
  cursor: pointer;
}
.gradient-border {
  position: relative;
  padding: 1px 2px;
  background: #767676;
  margin: 5px;
  border-radius: 8px;
}

.gradient-border::after {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: -1;
  margin: -1px;
  border-radius: 8px;
  background-image: linear-gradient(to bottom, #fff, transparent);
}

.animate-gradient-text {
  background: linear-gradient(90deg, #0f937c, #00ff99);
  background-size: 300%;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  animation: animate 5s ease-in-out infinite;
}

@keyframes animate {
  0% {
    background-position: 0 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0 50%;
  }
}

.text-clip-all {
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.dot {
  transform: translate(-2px, 600%);
  z-index: 100;
  left: 0;
  position: absolute;
}

.line {
  left: 0%;
  top: 50%;
  transform: translate(0%, -55%);
}

/* Special styling for WebKit/Blink */
input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  height: 24px;
  width: 24px;
  border-radius: 100%;
  background: #0f9;
  cursor: pointer;
  margin-top: 0; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
}

/* All the same stuff for Firefox */
input[type="range"]::-moz-range-thumb {
  -webkit-appearance: none;
  height: 24px;
  width: 24px;
  border-radius: 100%;
  background: #0f9;
  cursor: pointer;
}

/* All the same stuff for IE */
input[type="range"]::-ms-thumb {
  -webkit-appearance: none;
  height: 24px;
  width: 24px;
  border-radius: 100%;
  background: #0f9;
  cursor: pointer;
}

